all done without extra section

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                     <div class="popular">
                         <img src="images/images/camera.png" alt="">
-                        <h1>>Bloging Camera</h1>
+                        <h1>Bloging Camera</h1>
                         <h5>$660.45</h5>
                         <p>
                             <i class="fas fa-star filled"></i>
@@ -244,6 +244,9 @@
                     
                     </div>
                 </div>
+                <div class="see-more">
+                <a href="#">See More <i class="fas fa-arrow-right"></i></a>
+                </div>
 
 
             </div>
@@ -254,6 +257,18 @@
 
         <!-- Popular section End -->
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <h2>Influencer Products</h2>
+            <p>Copyright &copy; 2022 Influencer Products </p>
+            <p>All rights reserved</p>
+            <div class="media-icon">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
