--- a/index.html
+++ b/index.html
@@ -253,15 +253,18 @@
           <div class="cloud-3"><i class="fas fa-cloud-rain"></i></div>
           <div class="hidden-area"></div>
 
-          <div class="store">
-            <i class="fas fa-store"></i>
-          </div>
-          <div class="cycle">
-            <img src="images/images/bike-bicycle.gif" alt="" />
-          </div>
-          <div class="home">
-            <i class="fas fa-home"></i>
-          </div>
+        <div class="animated-area">
+            <div class="store">
+                <i class="fas fa-store"></i>
+              </div>
+              <div class="cycle">
+                  <img src="images/images/bike-bicycle.gif" alt="" />
+              </div>
+              <div class="home">
+                  <i class="fas fa-home"></i>
+                </div>
+                <hr>
+        </div>
         </div>
       </section>
       <!-- Animation section end -->
