--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Influencer's world</title>
     <!-- css link START  -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="CSS/" />
     <link
       rel="stylesheet"
-      href="css/tablet.css"
+      href="CSS/"
       media="screen and (min-width:768px) and (max-width:1123px)"/>
     <link
       rel="stylesheet"
-      href="css/desktop.css"
+      href="CSS/"
       media="screen and ( min-width:1124px)"/>
     <!-- css link END  -->
 
