--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Influencer's world</title>
     <!-- css link START  -->
-    <link rel="stylesheet" href="CSS/" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <link
       rel="stylesheet"
-      href="CSS/"
-      media="screen and (min-width:768px) and (max-width:1123px)"/>
+      href="CSS/tablet.css"
+      media="screen and (min-width:768px) and (max-width:1123px)"
+    />
     <link
       rel="stylesheet"
-      href="CSS/"
-      media="screen and ( min-width:1124px)"/>
+      href="CSS/desktop.css"
+      media="screen and ( min-width:1124px)"
+    />
     <!-- css link END  -->
 
     <!-- Google font link Start  -->
@@ -33,7 +35,6 @@
     ></script>
     <!-- Fontawesome link End -->
   </head>
-
 
   <body>
     <!-- header Start here  -->
@@ -253,18 +254,18 @@
           <div class="cloud-3"><i class="fas fa-cloud-rain"></i></div>
           <div class="hidden-area"></div>
 
-        <div class="animated-area">
+          <div class="animated-area">
             <div class="store">
-                <i class="fas fa-store"></i>
-              </div>
-              <div class="cycle">
-                  <img src="images/images/bike-bicycle.gif" alt="" />
-              </div>
-              <div class="home">
-                  <i class="fas fa-home"></i>
-                </div>
-                <hr>
-        </div>
+              <i class="fas fa-store"></i>
+            </div>
+            <div class="cycle">
+              <img src="images/images/bike-bicycle.gif" alt="" />
+            </div>
+            <div class="home">
+              <i class="fas fa-home"></i>
+            </div>
+            <hr />
+          </div>
         </div>
       </section>
       <!-- Animation section end -->
