--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Influencer's world</title>
     <!-- css link START  -->
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="CSS/tablet.css"
+      href="tablet.css"
       media="screen and (min-width:768px) and (max-width:1123px)"
     />
     <link
       rel="stylesheet"
-      href="CSS/desktop.css"
+      href="desktop.css"
       media="screen and ( min-width:1124px)"
     />
     <!-- css link END  -->
